Hung push services

--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -34,7 +34,7 @@
                         <!-- Field: Phone -->
                         <div class="mb-3">
                             <label for="phone" class="form-label">Số điện thoại</label>
-                            <input type="number" class="form-control" id="phone" name="phone" [(ngModel)]="registrationRequestDto.phoneNumber">
+                            <input type="text" class="form-control" id="phone" name="phone" [(ngModel)]="registrationRequestDto.phoneNumber">
                         </div>
 
                         <!-- Field: Birthday -->
